objects/Psydo_Case__c.object
<CustomObject>
    <description>This is a trigger object to insert/update the actual data</description>
    <fields>
        <fullName>Action__c</fullName>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insert</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CaseComment__c</fullName>
        <label>CaseComment</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <label>Record Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Psydo Case</label>
    <nameField>
        <displayFormat>PC{00000}</displayFormat>
        <label>Public Case Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Psydo Cases</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>